<resources>
    <string name="app_name">IntentExamples</string>
    <string name="launch_activity">launch activity</string>
    <string name="activity_two">activity two</string>
    <string name="activity_one">activity one</string>
    <string name="launch_service">launch service</string>
    <string name="launch_broadcast">launch broadcsast</string>
    <string name="check_tts_data">Check TTS Data</string>
    <string name="say">Say</string>
    <string name="say_hint">Type something to say.</string>
    <string name="launch_aviary">launch aviary</string>
    <string name="aviary_activity">Aviary Activity</string>
</resources>
