<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivityOne">


    <TextView
        android:id="@+id/activity_one_text"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/activity_one"/>

    <Button
        android:id="@+id/launch_activity_two"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/activity_one_text"
        android:text="@string/launch_activity"/>

    <Button
        android:id="@+id/launch_service"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/launch_activity_two"
        android:text="@string/launch_service"/>

    <Button
        android:id="@+id/check_tts_data"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/launch_service"
        android:text="@string/check_tts_data"/>

    <Button
        android:id="@+id/aviary_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/check_tts_data"
        android:text="@string/aviary_activity"/>

</RelativeLayout>
